fix alignments

--- a/assets/style.css
+++ b/assets/style.css
@@ -595,8 +595,6 @@ footer a {
   .skill-container {
     width: 100%;
     gap: 20px;
-    padding-left: 0;
-    padding-bottom: 0;
   }
 
   .skill-container h2 {
